requirements.txt moved.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,38 @@ jobs:
 
       - name: Run tests with coverage
         run: pytest --cov=src --cov-report=term-missing
+
+name: CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.13
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Lint code with ruff
+        run: ruff src tests
+
+      - name: Type check with mypy
+        run: mypy src
+
+      - name: Run tests with coverage
+        run: pytest --cov=src --cov-report=term-missing
