--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Lint code with ruff
-        run: ruff src tests
+        run: ruff check src tests  # ← Added 'check' subcommand
 
       - name: Type check with mypy
         run: mypy src
