--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -19,11 +20,16 @@ jobs:
         with:
           python-version: 3.13
 
-      - name: Install dependencies
+      - name: Install kata refactor dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r kata-refactors/requirements.txt
           pip install -e kata-refactors/
+
+      - name: Install ecommerce api dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r api/requirements.txt
 
       - name: Lint code with ruff
         working-directory: ./kata-refactors
@@ -87,3 +93,20 @@ jobs:
           print(f'Coverage: {coverage:.1%}')
           assert coverage >= 0.8, f'Coverage {coverage:.1%} is below 80% threshold'
           "
+
+  validate_contract:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.13
+
+      - name: Install OpenAPI validator
+        run: pip install openapi-spec-validator
+
+      - name: Validate OpenAPI spec
+        run: python -m openapi_spec_validator openapi.yaml
