--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
           path: |
             kata-refactors/.ruff_cache/
           retention-days: 14
+          if-no-files-found: ignore
 
       - name: Generate test summary
         working-directory: ./kata-refactors
@@ -109,4 +110,4 @@ jobs:
         run: pip install openapi-spec-validator
 
       - name: Validate OpenAPI spec
-        run: python -m openapi_spec_validator openapi.yaml
+        run: python -m openapi_spec_validator ./api/openapi.yaml
