--- a/api/auth/app/pytest.ini
+++ b/api/auth/app/pytest.ini
@@ -1,5 +1,18 @@
 [pytest]
-pythonpath =
+pythonpath = 
     ./
     ./api/auth/app/
 testpaths = ./api/auth/app/tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+addopts = 
+    -v
+    --tb=short
+    --strict-markers
+    --strict-config
+    --disable-warnings
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
