fix: path issues with nginx has been fixed.

--- a/api/nginx/nginx.conf
+++ b/api/nginx/nginx.conf
@@ -32,7 +32,7 @@ http {
             add_header Content-Type text/plain;
         }
 
-        location /api/auth {
+        location /api/auth/ {
             proxy_pass http://auth_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -44,7 +44,7 @@ http {
             proxy_read_timeout 30s;
         }
 
-        location /api/cart {
+        location /api/cart/ {
             proxy_pass http://cart_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -56,7 +56,7 @@ http {
             proxy_read_timeout 30s;
         }
 
-        location /api/orders {
+        location /api/orders/ {
             proxy_pass http://orders_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -68,7 +68,7 @@ http {
             proxy_read_timeout 30s;
         }
 
-        location /api/products {
+        location /api/products/ {
             proxy_pass http://products_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -80,7 +80,7 @@ http {
             proxy_read_timeout 30s;
         }
 
-        location /api/profile {
+        location /api/profile/ {
             proxy_pass http://profile_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
