--- a/api/auth/app/.env
+++ b/api/auth/app/.env
@@ -10,3 +10,5 @@ ACCESS_TOKEN_EXPIRE_SECONDS=280
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
 ENVIRONMENT=development
+
+DATABASE_URL="postgresql+asyncpg://postgres:toor@localhost:5432/auth"
