--- a/api/auth/app/pytest.ini
+++ b/api/auth/app/pytest.ini
@@ -16,3 +16,5 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
+
+asyncio_mode = auto
