--- a/api/orders/app/.env
+++ b/api/orders/app/.env
@@ -7,3 +7,4 @@ CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 LOG_FILE=order_service.log
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
+DATABASE_URL=postgresql+asyncpg://postgres:toor@localhost:5432/orders_db
