feat: all databases moved to containers, now the app runs on docker.

--- a/api/auth/app/.env
+++ b/api/auth/app/.env
@@ -11,4 +11,4 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 
 ENVIRONMENT=development
 
-DATABASE_URL="postgresql+asyncpg://postgres:toor@localhost:5432/auth"
+DATABASE_URL="postgresql+asyncpg://postgres:toor@auth_db:5432/auth"
