--- a/api/auth/Dockerfile
+++ b/api/auth/Dockerfile
@@ -3,11 +3,10 @@ FROM python:3.11-slim
 WORKDIR /app
 
 COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY /app .
+COPY . .
 
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "sleep 5 && alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000"]
