--- a/api/auth/app/alembic.ini
+++ b/api/auth/app/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql://postgres:toor@localhost:5432/auth
+sqlalchemy.url = postgresql://postgres:toor@auth_db:5432/auth
 
 
 [post_write_hooks]
