--- a/api/products/requirements.txt
+++ b/api/products/requirements.txt
@@ -1,13 +1,12 @@
-fastapi
-PyJWT
-bcrypt
-pytest
-pytest-asyncio
-pytest-cov
-pydantic[email]
-uvicorn
+fastapi==0.104.1
+PyJWT==2.8.0
+bcrypt==4.1.2
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+pydantic[email]==2.5.0
+uvicorn[standard]==0.24.0
 httpx==0.27.2
-dotenv
-pymongo==3.12
-motor
-bson
+python-dotenv==1.0.0
+pymongo==4.5.0
+motor==3.3.2
