--- a/api/products/app/.env
+++ b/api/products/app/.env
@@ -13,4 +13,5 @@ LOG_FILE=product_service.log
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
 MONGODB_URI=mongodb://localhost:27017/
+TEST_MONGODB_URI=mongodb://localhost:27017/
 MONGODB_DB_NAME=product_db
