--- a/api/products/app/.env
+++ b/api/products/app/.env
@@ -12,6 +12,6 @@ LOG_FILE=product_service.log
 
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
-MONGODB_URI=mongodb://localhost:27017/
+MONGODB_URI=mongodb://mongodb:27017/
 TEST_MONGODB_URI=mongodb://localhost:27017/
 MONGODB_DB_NAME=product_db
