--- a/api/services/nginx/nginx.conf
+++ b/api/services/nginx/nginx.conf
@@ -23,6 +23,10 @@ http {
         server profile:8004;
     }
 
+    upstream static_backend {
+        server statics:8005;
+    }
+
     server {
         listen 80;
         server_name localhost;
@@ -30,6 +34,36 @@ http {
         location /health {
             return 200 "OK";
             add_header Content-Type text/plain;
+        }
+
+        location /api/static/ {
+            proxy_pass http://static_backend/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 4k;
+            proxy_max_temp_file_size 0;
+            
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        location /api/images/ {
+            proxy_pass http://static_backend/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+            
+            client_max_body_size 10M;
         }
 
         location /api/auth/ {
@@ -93,7 +127,7 @@ http {
         }
 
         location / {
-            return 404 '{"error": "Route not found", "available_routes": ["/api/auth/", "/api/cart/", "/api/orders/", "/api/products/", "/api/profile/", "/health"]}';
+            return 404 '{"error": "Route not found", "available_routes": ["/api/auth/", "/api/cart/", "/api/orders/", "/api/products/", "/api/profile/", "/api/images/", "/static/", "/health"]}';
             add_header Content-Type application/json;
         }
     }
