--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.so
-<<<<<<< HEAD
 api/services/.api/services-venv
 api/services/auth/.auth-venv
 api/services/products/.venv-products
@@ -11,9 +10,8 @@ api/services/cart/.venv-cart
 api/services/orders/.venv-orders
 api/services/profile/.venv-profile
 api/services/statics/.venv-statics
-=======
+api/services/statics/app/metadata.json
 
->>>>>>> feat/authentication
 # C extensions
 *.c
 api/services/products/app/static
