feat: products - added image-related pydantic models and updated database model.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ api/services/orders/.venv-orders
 api/services/profile/.venv-profile
 api/services/statics/.venv-statics
 api/services/statics/app/metadata.json
+api/services/statics/metadata.json
 
 # C extensions
 *.c
