--- a/api/services/statics/app/.env
+++ b/api/services/statics/app/.env
@@ -5,3 +5,4 @@ MAX_FILE_SIZE=5242880
 ALLOWED_MIME_TYPES=image/jpeg,image/png,image/webp,image/gif
 UPLOAD_DIR=./static/img
 METADATA_FILE=./metadata.json
+DEFAULT_SUBDIRECTORY=./general
