--- a/api/services/products/app/.env
+++ b/api/services/products/app/.env
@@ -15,3 +15,4 @@ MAX_PAGE_SIZE=100
 MONGODB_URI=mongodb://mongodb:27017/
 TEST_MONGODB_URI=mongodb://localhost:27017/
 MONGODB_DB_NAME=product_db
+STATIC_SERVICE_URL=http://static:8005/api/static
