--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -43,10 +43,8 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - ENVIRONMENT=development
+      - ENVIRONMENT=production
       - DATABASE_URL=postgresql+asyncpg://postgres:toor@auth_db:5432/auth
-    volumes:
-      - ./services/auth/app:/app
     depends_on:
       - auth_db
     networks:
@@ -57,9 +55,7 @@ services:
     ports:
       - "8001:8001"
     environment:
-      - ENVIRONMENT=development
-    volumes:
-      - ./services/cart/app:/app
+      - ENVIRONMENT=production
     networks:
       - app-network
 
@@ -68,10 +64,8 @@ services:
     ports:
       - "8002:8002"
     environment:
-      - ENVIRONMENT=development
+      - ENVIRONMENT=production
       - DATABASE_URL=postgresql+asyncpg://postgres:toor@orders_db:5432/orders_db
-    volumes:
-      - ./services/orders/app:/app
     depends_on:
       - orders_db
     networks:
@@ -82,15 +76,13 @@ services:
     ports:
       - "8003:8003"
     environment:
-      - ENVIRONMENT=development
+      - ENVIRONMENT=production
       - MONGODB_URI=mongodb://mongodb:27017/
       - MONGODB_DB_NAME=product_db
-      - STATIC_SERVICE_URL=http://statics:8005  # ADD THIS LINE - CRITICAL!
-    volumes:
-      - ./services/products/app:/app
+      - STATIC_SERVICE_URL=http://statics:8005
     depends_on:
       - mongodb
-      - statics  # Also add dependency on statics
+      - statics
     networks:
       - app-network
 
@@ -99,9 +91,7 @@ services:
     ports:
       - "8004:8004"
     environment:
-      - ENVIRONMENT=development
-    volumes:
-      - ./services/profile/app:/app
+      - ENVIRONMENT=production
     networks:
       - app-network
 
@@ -110,15 +100,14 @@ services:
     ports:
       - "8005:8005"
     environment:
-      - ENVIRONMENT=development
+      - ENVIRONMENT=production
       - HOST=0.0.0.0
       - PORT=8005
       - MAX_FILE_SIZE=5242880
       - ALLOWED_MIME_TYPES=image/jpeg,image/png,image/webp
-      - UPLOAD_DIR=./static/img
-      - METADATA_FILE=./metadata.json
+      - UPLOAD_DIR=/app/static/img
+      - METADATA_FILE=/app/metadata.json
     volumes:
-      - ./services/statics/app:/app
       - statics_storage:/app/static
     networks:
       - app-network
