--- a/api/services/products/app/.env
+++ b/api/services/products/app/.env
@@ -13,6 +13,6 @@ LOG_FILE=product_service.log
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
 MONGODB_URI=mongodb://mongodb:27017/
-TEST_MONGODB_URI=mongodb://localhost:27017/
+TEST_MONGODB_URI=mongodb://mongodb:27017/
 MONGODB_DB_NAME=product_db
-STATIC_SERVICE_URL=http://static:8005/api/static
+STATIC_SERVICE_URL=http://statics:8005/api/static
