--- a/api/services/nginx/nginx.conf
+++ b/api/services/nginx/nginx.conf
@@ -3,29 +3,22 @@ events {
 }
 
 http {
-    upstream auth_backend {
-        server auth:8000;
-    }
+    # gzip compression
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length 256;
+    gzip_comp_level 5;
+    gzip_vary on;
 
-    upstream cart_backend {
-        server cart:8001;
-    }
+    # rate limiting
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
-    upstream orders_backend {
-        server orders:8002;
-    }
-
-    upstream products_backend {
-        server products:8003;
-    }
-
-    upstream profile_backend {
-        server profile:8004;
-    }
-
-    upstream static_backend {
-        server statics:8005;
-    }
+    upstream auth_backend { server auth:8000; }
+    upstream cart_backend { server cart:8001; }
+    upstream orders_backend { server orders:8002; }
+    upstream products_backend { server products_green:8003; }
+    upstream profile_backend { server profile:8004; }
+    upstream static_backend { server statics:8005; }
 
     server {
         listen 80;
@@ -42,14 +35,16 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             proxy_buffering on;
             proxy_buffer_size 4k;
             proxy_buffers 8 4k;
             proxy_max_temp_file_size 0;
-            
+
             expires 1y;
             add_header Cache-Control "public, immutable";
+
+            limit_req zone=api_limit burst=20 nodelay;
         }
 
         location /api/images/ {
@@ -58,12 +53,14 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
-            
+
             client_max_body_size 10M;
+
+            limit_req zone=api_limit burst=20 nodelay;
         }
 
         location /api/auth/ {
@@ -72,10 +69,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
+
+            limit_req zone=api_limit burst=20 nodelay;
         }
 
         location /api/cart/ {
@@ -84,10 +83,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
+
+            limit_req zone=api_limit burst=20 nodelay;
         }
 
         location /api/orders/ {
@@ -96,10 +97,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
+
+            limit_req zone=api_limit burst=20 nodelay;
         }
 
         location /api/products/ {
@@ -108,10 +111,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
+
+            limit_req zone=api_limit burst=20 nodelay;
         }
 
         location /api/profile/ {
@@ -120,10 +125,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
+
+            limit_req zone=api_limit burst=20 nodelay;
         }
 
         location / {
