--- a/api/services/nginx/nginx.conf
+++ b/api/services/nginx/nginx.conf
@@ -3,26 +3,83 @@ events {
 }
 
 http {
-    # gzip compression
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    keepalive_requests 100;
+
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_min_length 256;
     gzip_comp_level 5;
     gzip_vary on;
 
-    # rate limiting
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=200r/s;
 
-    upstream auth_backend { server auth:8000; }
-    upstream cart_backend { server cart:8001; }
-    upstream orders_backend { server orders:8002; }
-    upstream products_backend { server products_green:8003; }
-    upstream profile_backend { server profile:8004; }
-    upstream static_backend { server statics:8005; }
+    upstream auth_backend { 
+        least_conn;
+        server api-auth-1:8000;
+        server api-auth-2:8000;
+        server api-auth-3:8000;
+        server api-auth-4:8000;
+        server api-auth-5:8000;
+        keepalive 32;
+    }
+    upstream cart_backend { 
+        least_conn;
+        server api-cart-1:8001;
+        server api-cart-2:8001;
+        server api-cart-3:8001;
+        server api-cart-4:8001;
+        server api-cart-5:8001;
+        keepalive 32;
+    }
+    upstream orders_backend { 
+        least_conn;
+        server api-orders-1:8002;
+        server api-orders-2:8002;
+        server api-orders-3:8002;
+        server api-orders-4:8002;
+        server api-orders-5:8002;
+        keepalive 32;
+    }
+    upstream products_backend { 
+        least_conn;
+        server api-products-1:8003;
+        server api-products-2:8003;
+        server api-products-3:8003;
+        server api-products-4:8003;
+        server api-products-5:8003;
+        keepalive 32;
+    }
+    upstream profile_backend { 
+        least_conn;
+        server api-profile-1:8004;
+        server api-profile-2:8004;
+        server api-profile-3:8004;
+        server api-profile-4:8004;
+        server api-profile-5:8004;
+        keepalive 32;
+    }
+    upstream static_backend { 
+        least_conn;
+        server api-statics-1:8005;
+        server api-statics-2:8005;
+        server api-statics-3:8005;
+        server api-statics-4:8005;
+        server api-statics-5:8005;
+        keepalive 32;
+    }
 
     server {
         listen 80;
         server_name localhost;
+
+        # proxy_buffering on;
+        # proxy_buffer_size 16k;
+        # proxy_buffers 8 16k;
+        # proxy_busy_buffers_size 112k;
 
         location /health {
             return 200 "OK";
@@ -31,6 +88,8 @@ http {
 
         location /api/static/ {
             proxy_pass http://static_backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,27 +103,13 @@ http {
             expires 1y;
             add_header Cache-Control "public, immutable";
 
-            limit_req zone=api_limit burst=20 nodelay;
-        }
-
-        location /api/images/ {
-            proxy_pass http://static_backend/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-
-            client_max_body_size 10M;
-
-            limit_req zone=api_limit burst=20 nodelay;
+            limit_req zone=api_limit burst=200 nodelay;
         }
 
         location /api/auth/ {
             proxy_pass http://auth_backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -74,11 +119,13 @@ http {
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
 
-            limit_req zone=api_limit burst=20 nodelay;
+            limit_req zone=api_limit burst=200 nodelay;
         }
 
         location /api/cart/ {
             proxy_pass http://cart_backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -88,11 +135,13 @@ http {
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
 
-            limit_req zone=api_limit burst=20 nodelay;
+            limit_req zone=api_limit burst=200 nodelay;
         }
 
         location /api/orders/ {
             proxy_pass http://orders_backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -102,11 +151,13 @@ http {
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
 
-            limit_req zone=api_limit burst=20 nodelay;
+            limit_req zone=api_limit burst=200 nodelay;
         }
 
         location /api/products/ {
             proxy_pass http://products_backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -116,11 +167,13 @@ http {
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
 
-            limit_req zone=api_limit burst=20 nodelay;
+            limit_req zone=api_limit burst=200 nodelay;
         }
 
         location /api/profile/ {
             proxy_pass http://profile_backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -130,11 +183,11 @@ http {
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
 
-            limit_req zone=api_limit burst=20 nodelay;
+            limit_req zone=api_limit burst=200 nodelay;
         }
 
         location / {
-            return 404 '{"error": "Route not found", "available_routes": ["/api/auth/", "/api/cart/", "/api/orders/", "/api/products/", "/api/profile/", "/api/images/", "/static/", "/health"]}';
+            return 404 '{"error": "Route not found", "available_routes": ["/api/auth/", "/api/cart/", "/api/orders/", "/api/products/", "/api/profile/", "/api/static/", "/health"]}';
             add_header Content-Type application/json;
         }
     }
