fix: auth - minor bugs fixed.

--- a/api/services/auth/app/.env
+++ b/api/services/auth/app/.env
@@ -4,7 +4,7 @@ RELOAD=True
 LOG_LEVEL=info
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
-JWT_SECRET_KEY="your-super-secret-key-change-in-production"
+JWT_SECRET_KEY=your-super-secret-key-change-in-production
 
 ACCESS_TOKEN_EXPIRE_SECONDS=280
 REFRESH_TOKEN_EXPIRE_DAYS=7
