--- a/api/services/orders/app/.env
+++ b/api/services/orders/app/.env
@@ -8,3 +8,4 @@ LOG_FILE=order_service.log
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
 DATABASE_URL=postgresql+asyncpg://postgres:toor@orders_db:5432/orders_db
+JWT_SECRET_KEY=your-super-secret-key-change-in-production
