feat: all - now to access all service you have to authorize first, and use access token to gain access to each service.

--- a/api/services/products/app/.env
+++ b/api/services/products/app/.env
@@ -16,3 +16,5 @@ MONGODB_URI=mongodb://mongodb:27017/
 TEST_MONGODB_URI=mongodb://mongodb:27017/
 MONGODB_DB_NAME=product_db
 STATIC_SERVICE_URL=http://statics:8005/api/static
+
+JWT_SECRET_KEY=your-super-secret-key-change-in-production
