--- a/api/services/profile/app/.env
+++ b/api/services/profile/app/.env
@@ -7,3 +7,5 @@ CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 LOG_FILE=profile_service.log
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
+JWT_SECRET_KEY=your-super-secret-key-change-in-production
+
