--- a/api/services/statics/app/.env
+++ b/api/services/statics/app/.env
@@ -6,3 +6,4 @@ ALLOWED_MIME_TYPES=image/jpeg,image/png,image/webp,image/gif
 UPLOAD_DIR=./static/img
 METADATA_FILE=./metadata.json
 DEFAULT_SUBDIRECTORY=./general
+JWT_SECRET_KEY=your-super-secret-key-change-in-production
