fix: .gitignore - do not include .venv-payments.

--- a/api/services/nginx/nginx.conf
+++ b/api/services/nginx/nginx.conf
@@ -20,66 +20,59 @@ http {
     upstream auth_backend { 
         least_conn;
         server api-auth-1:8000;
-        server api-auth-2:8000;
-        server api-auth-3:8000;
-        server api-auth-4:8000;
-        server api-auth-5:8000;
-        keepalive 32;
-    }
-    upstream cart_backend { 
-        least_conn;
-        server api-cart-1:8001;
-        server api-cart-2:8001;
-        server api-cart-3:8001;
-        server api-cart-4:8001;
-        server api-cart-5:8001;
+        # server api-auth-2:8000;
+        # server api-auth-3:8000;
+        # server api-auth-4:8000;
+        # server api-auth-5:8000;
         keepalive 32;
     }
     upstream orders_backend { 
         least_conn;
         server api-orders-1:8002;
-        server api-orders-2:8002;
-        server api-orders-3:8002;
-        server api-orders-4:8002;
-        server api-orders-5:8002;
+        # server api-orders-2:8002;
+        # server api-orders-3:8002;
+        # server api-orders-4:8002;
+        # server api-orders-5:8002;
+        keepalive 32;
+    }
+    upstream payments_backend { 
+        least_conn;
+        server api-payments-1:8001;
+        # server api-payments-2:8001;
+        # server api-payments-3:8001;
         keepalive 32;
     }
     upstream products_backend { 
         least_conn;
         server api-products-1:8003;
-        server api-products-2:8003;
-        server api-products-3:8003;
-        server api-products-4:8003;
-        server api-products-5:8003;
+        # server api-products-2:8003;
+        # server api-products-3:8003;
+        # server api-products-4:8003;
+        # server api-products-5:8003;
         keepalive 32;
     }
     upstream profile_backend { 
         least_conn;
         server api-profile-1:8004;
-        server api-profile-2:8004;
-        server api-profile-3:8004;
-        server api-profile-4:8004;
-        server api-profile-5:8004;
+        # server api-profile-2:8004;
+        # server api-profile-3:8004;
+        # server api-profile-4:8004;
+        # server api-profile-5:8004;
         keepalive 32;
     }
     upstream static_backend { 
         least_conn;
         server api-statics-1:8005;
-        server api-statics-2:8005;
-        server api-statics-3:8005;
-        server api-statics-4:8005;
-        server api-statics-5:8005;
+        # server api-statics-2:8005;
+        # server api-statics-3:8005;
+        # server api-statics-4:8005;
+        # server api-statics-5:8005;
         keepalive 32;
     }
 
     server {
         listen 80;
         server_name localhost;
-
-        # proxy_buffering on;
-        # proxy_buffer_size 16k;
-        # proxy_buffers 8 16k;
-        # proxy_busy_buffers_size 112k;
 
         location /health {
             return 200 "OK";
@@ -122,8 +115,8 @@ http {
             limit_req zone=api_limit burst=200 nodelay;
         }
 
-        location /api/cart/ {
-            proxy_pass http://cart_backend/;
+        location /api/payments/ {
+            proxy_pass http://payments_backend/;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header Host $host;
@@ -135,7 +128,7 @@ http {
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
 
-            limit_req zone=api_limit burst=200 nodelay;
+            limit_req zone=api_limit burst=100 nodelay;
         }
 
         location /api/orders/ {
@@ -187,7 +180,7 @@ http {
         }
 
         location / {
-            return 404 '{"error": "Route not found", "available_routes": ["/api/auth/", "/api/cart/", "/api/orders/", "/api/products/", "/api/profile/", "/api/static/", "/health"]}';
+            return 404 '{"error": "Route not found", "available_routes": ["/api/auth/", "/api/payments/", "/api/orders/", "/api/products/", "/api/profile/", "/api/static/", "/health"]}';
             add_header Content-Type application/json;
         }
     }
