--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ api/services/cart/.venv-cart
 api/services/orders/.venv-orders
 api/services/profile/.venv-profile
 api/services/statics/.venv-statics
-api/services/payments/.venv-payments
+api/services/statics/.venv-payments
 api/services/statics/app/metadata.json
 api/services/statics/metadata.json
 api/services/payments/app/.env
